--- a/requirements.txt
+++ b/requirements.txt
@@ -1,64 +1,59 @@
-alembic==0.8.9
-backports.ssl-match-hostname==3.5.0.1
-bcrypt==3.1.7
-cached-property==1.3.0
-cffi==1.13.2
-chardet==2.3.0
-Click==7.0
-cryptography==1.7.1
-decorator==4.0.11
-docker-compose==1.8.0
-docker-py==1.9.0
-dockerpty==0.4.1
-docopt==0.6.2
-dominate==2.3.1
-enum34==1.1.6
-feedparser==5.1.3
-Flask==1.1.1
-Flask-Bcrypt==0.7.1
-Flask-Bootstrap==3.3.7.0
-Flask-Login==0.4.0
-Flask-Migrate==2.0.1
-Flask-Script==2.0.5
-Flask-SQLAlchemy==2.1
-Flask-Testing==0.6.1
-Flask-WTF==0.13.1
-funcsigs==1.0.2
-functools32==3.2.3.post2
-idna==2.2
-ipaddress==1.0.17
-itsdangerous==1.1.0
-Jinja2==2.10.3
-jsonschema==2.5.1
-keyring==10.1
-keyrings.alt==1.3
-Mako==1.0.6
+attrs==19.1.0
+backcall==0.1.0
+bleach==3.1.0
+cached-property==1.5.1
+cycler==0.10.0
+decorator==4.4.0
+defusedxml==0.5.0
+entrypoints==0.3
+ipykernel==5.1.0
+ipython==7.4.0
+ipython-genutils==0.2.0
+ipywidgets==7.4.2
+jedi==0.13.3
+Jinja2==2.10
+jsonschema==3.0.1
+jupyter==1.0.0
+jupyter-client==5.2.4
+jupyter-console==6.0.0
+jupyter-core==4.4.0
+kiwisolver==1.0.1
+linearmodels==4.12
 MarkupSafe==1.1.1
-mock==2.0.0
-musicbrainzngs==0.6
-mutagen==1.36
-MySQL-python==1.2.5
-numpy==1.12.1
-pbr==1.10.0
-pyasn1==0.1.9
-pycparser==2.19
-pycrypto==2.6.1
-pygobject==3.22.0
-pyinotify==0.9.6
-pyOpenSSL==16.2.0
-python-dateutil==2.5.3
-python-editor==1.0.3
-pyxdg==0.25
-PyYAML==3.12
-quodlibet==3.7.1
-requests==2.12.4
-SecretStorage==2.3.1
-six==1.14.0
-SQLAlchemy==1.1.4
-texttable==0.8.4
-urllib3==1.19.1
-uTidylib==0.3
-visitor==0.1.3
-websocket-client==0.37.0
-Werkzeug==0.16.0
-WTForms==2.1
+matplotlib==3.0.3
+mistune==0.8.4
+nbconvert==5.4.1
+nbformat==4.4.0
+notebook==5.7.7
+numpy==1.16.2
+pandas==0.24.2
+pandocfilters==1.4.2
+parso==0.3.4
+patsy==0.5.1
+pexpect==4.6.0
+pickleshare==0.7.5
+prometheus-client==0.6.0
+prompt-toolkit==2.0.9
+ptyprocess==0.6.0
+Pygments==2.3.1
+pyparsing==2.3.1
+pyrsistent==0.14.11
+python-dateutil==2.8.0
+pytz==2018.9
+pyzmq==18.0.1
+qtconsole==4.4.3
+scikit-learn==0.20.3
+scipy==1.2.1
+seaborn==0.9.0
+Send2Trash==1.5.0
+six==1.12.0
+sklearn==0.0
+statsmodels==0.9.0
+terminado==0.8.2
+testpath==0.4.2
+tornado==6.0.2
+traitlets==4.3.2
+wcwidth==0.1.7
+webencodings==0.5.1
+widgetsnbextension==3.4.2
+xlrd==1.2.0
