--- a/requirements.txt
+++ b/requirements.txt
@@ -1,112 +1,22 @@
-alembic==0.9.6
-attrs==19.1.0
-Babel==2.5.1
-backcall==0.1.0
-bcrypt==3.1.7
-beautifulsoup4==4.7.1
-bleach==3.1.0
-blinker==1.4
-Brlapi==0.6.5
-certifi==2017.7.27.1
-cffi==1.14.0
-chardet==3.0.4
-Click==7.0
-cryptography==1.7.1
-cupshelpers==1.0
-decorator==4.4.0
-defusedxml==0.5.0
-dominate==2.4.0
-elasticsearch==6.1.1
-entrypoints==0.3
+alembic==1.4.2
+click==7.1.1
+dominate==2.5.1
 Flask==1.1.1
-Flask-Babel==0.11.2
-Flask-Bcrypt==0.7.1
 Flask-Bootstrap==3.3.7.1
-Flask-HTTPAuth==3.2.3
-Flask-Login==0.4.0
-Flask-Mail==0.9.1
-Flask-Migrate==2.1.1
-Flask-Moment==0.5.2
-Flask-Session==0.3.1
-Flask-SQLAlchemy==2.3.2
+Flask-Login==0.5.0
+Flask-Migrate==2.5.3
+Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.3
-guess-language-spirit==0.5.3
-httplib2==0.9.2
-idna==2.6
-ipykernel==5.1.0
-ipython==7.4.0
-ipython-genutils==0.2.0
-ipywidgets==7.4.2
 itsdangerous==1.1.0
-jedi==0.13.3
 Jinja2==2.11.1
-jsonschema==3.0.1
-jupyter==1.0.0
-jupyter-client==5.2.4
-jupyter-console==6.0.0
-jupyter-core==4.4.0
-keyring==10.1
-keyrings.alt==1.3
-louis==3.0.0
-Mako==1.0.7
+Mako==1.1.2
 MarkupSafe==1.1.1
-mistune==0.8.4
 mysqlclient==1.4.6
-nbconvert==5.4.1
-nbformat==4.4.0
-notebook==5.7.7
-numpy==1.16.1
-pandas==0.24.1
-pandocfilters==1.4.2
-parso==0.3.4
-pexpect==4.6.0
-pickleshare==0.7.5
-Pillow==4.0.0
-prometheus-client==0.6.0
-prompt-toolkit==2.0.9
-ptyprocess==0.6.0
-pyasn1==0.1.9
-pycparser==2.19
-pycrypto==2.6.1
-pycups==1.9.73
-pycurl==7.43.0
-Pygments==2.3.1
-pygobject==3.22.0
-PyJWT==1.5.3
-pyrsistent==0.14.11
-pysmbc==1.0.15.6
-python-apt==1.4.1
-python-dateutil==2.8.0
-python-debian==0.1.30
-python-debianbts==2.6.1
-python-dotenv==0.7.1
-python-editor==1.0.3
-pytz==2018.9
-pyxdg==0.25
-pyzmq==18.0.1
-qtconsole==4.4.3
-redis==3.2.1
-reportbug==7.1.7
-reportlab==3.3.0
-requests==2.18.4
-rq==1.0
-SecretStorage==2.3.1
-Send2Trash==1.5.0
+pkg-resources==0.0.0
+python-dateutil==2.8.1
+python-editor==1.0.4
 six==1.14.0
-soupsieve==1.7.3
-SQLAlchemy==1.3.13
-terminado==0.8.2
-testpath==0.4.2
-tornado==6.0.2
-traitlets==4.3.2
-ufw==0.35
-unattended-upgrades==0.1
-urllib3==1.22
-virtualenv==16.4.3
+SQLAlchemy==1.3.15
 visitor==0.1.3
-wcwidth==0.1.7
-webencodings==0.5.1
 Werkzeug==1.0.0
-widgetsnbextension==3.4.2
 WTForms==2.2.1
-WTForms-SQLAlchemy==0.1
