--- a/requirements.txt
+++ b/requirements.txt
@@ -1,66 +1,23 @@
 alembic==1.4.2
-attrs==19.3.0
-backcall==0.1.0
-bleach==3.1.3
-certifi==2019.11.28
-chardet==3.0.4
 click==7.1.1
-decorator==4.4.2
-defusedxml==0.6.0
 dominate==2.5.1
-entrypoints==0.3
 Flask==1.1.1
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.5.0
 Flask-Migrate==2.5.3
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.3
-idna==2.9
-importlib-metadata==1.5.0
-ipykernel==5.1.4
-ipython==7.9.0
-ipython-genutils==0.2.0
 itsdangerous==1.1.0
-jedi==0.16.0
 Jinja2==2.11.1
-jsonschema==3.2.0
-jupyter-client==6.1.0
-jupyter-core==4.6.3
 Mako==1.1.2
 MarkupSafe==1.1.1
-mistune==0.8.4
 mysqlclient==1.4.6
-nbconvert==5.6.1
-nbformat==5.0.4
-notebook==6.0.3
-pandocfilters==1.4.2
-parso==0.6.2
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==7.0.0
 pkg-resources==0.0.0
-prometheus-client==0.7.1
-prompt-toolkit==2.0.10
-ptyprocess==0.6.0
-pycrypto==2.6.1
-Pygments==2.6.1
-pyrsistent==0.15.7
 python-dateutil==2.8.1
 python-editor==1.0.4
-pyxdg==0.26
-pyzmq==19.0.0
-requests==2.23.0
-Send2Trash==1.5.0
 six==1.14.0
 SQLAlchemy==1.3.15
-terminado==0.8.3
-testpath==0.4.4
-tornado==6.0.4
-traitlets==4.3.3
-urllib3==1.25.8
+uWSGI==2.0.18
 visitor==0.1.3
-wcwidth==0.1.8
-webencodings==0.5.1
 Werkzeug==1.0.0
 WTForms==2.2.1
-zipp==1.2.0
